css/styles_NEW.css
/* ... */
.detail-header {
	background-color: var(--color-light-gray);
	padding: 72px 0px 32px 0px;
}

.detail-header-inner {
	width: 56%;
	margin: 0 auto;
}

.twitter-tweet-rendered {
	margin-left: auto;
	margin-right: auto;
	margin-top: 48px !important;
}

.bandcamp-player {
	border: 0;
	width: 100%;
	height: 120px;
	margin-top: 16px;
}

.bandcamp-player #player .inline_player {
	max-width: none !important;
}

.container-fade-out {
	--fade-amount: 25%;
	mask-image: linear-gradient(to bottom, black var(--fade-amount), black calc(100% - var(--fade-amount)), transparent);
}

/* YOUTUBE EMBED START */
.video-container {
	width: 100%;
    aspect-ratio: 16 / 9;
}

.video {
    width: 100%;
    height: 100%;
    border-radius: 8px;
}
/* YOUTUBE EMBED END */

/* DIVS END
------------------ */


/* WORK GRID
------------------- */
.work {
	background-color: var(--color-white);
	width:100%;
	margin: 0 auto;
	overflow: hidden;
	padding-bottom: 76px;
}

.grid {
	width: 85%;
	max-width: 1148px;
	margin: 0 auto;
	text-align: justify;
}

.grid img {
	width: 100%;
	position: relative;
	display: block;
}

.grid:after {content:'';
	display: inline-block;
	width: 100%;
}

.grid-box {
	overflow: hidden;
	width: 48%;
	height: 48%;
	position: relative;
	display: inline-block;
	margin-top: 5%;
	transition: all .2s ease-in-out;
	vertical-align: top;
}

.info {
	opacity: 0;
	top: 0;
	color: var(--color-white);
	position: absolute;
	width: -webkit-fill-available;
	height: 100%;
	text-align: left;
	padding: var(--spacing-9);
	transition: opacity 0.2s linear;
	background-color: var(--color-black);
}

.grid-box img {
	border-radius: 8px;
	border: 1px solid var(--color-light-gray);
	transition: all .15s ease-in-out;
	box-sizing: border-box;
}

.grid-box img:hover {
	border-radius: 36px;
	opacity: 0.7;
}

.top-fadeout {
	opacity: 1;
}

.mobile-info {
	display: none;
}

.grid .mobile-info {
	text-align: left;
}

.mobile-info h3 {
	margin-top: var(--spacing-3);
}

.home-tag-container {
	letter-spacing: 0.02em;
	font-weight: 300;
	line-height: 1.7em;
	margin-top: 1em;
	margin-bottom: 0.75em;
	padding-bottom: 0;
}

.home-title {
	text-align: left;
	padding: 0;
}

/* END WORK GRID
------------------- */

ul.social {
	font-family: 'entypo-social';
	font-size: 3em;
	list-style: none;
	margin: var(--spacing-0);
	padding: var(--spacing-0);
	display: inline;
	letter-spacing: 0.05em;
}

li.social-list {
	display: inline;
	padding-top: var(--spacing-6);
}

li.social-list a:link {
	border-bottom: none;
}

li.social-list a:visited {
	border-bottom: none;
}

.footnote {
	font-size: 14px;
	line-height: 1.8em;
	color: var(--color-dark-gray);
	letter-spacing: 0.02em;
	display: block;
}

.footnote-thoughts {
	font-size: 16px;
	line-height: 1.8em;
	color: var(--color-light-blue);
	margin-bottom: 60px;
	margin-top: var(--spacing-0);
}

.footnote-date {
	font-size: 14px;
	color: var(--color-blue);
	font-family: 'DM Mono', monospace;
	font-weight: 300;
	text-transform: uppercase;
	letter-spacing: 0.05em;
	line-height: 1em;
	display: inline-block; /* PREVENTS UNNECESSARY EXCESSIVE LINE HEIGHT */
	line-height: 1.5em;
}

.image-caption {
	font-size: 14px;
	line-height: 1.6em;
	color: var(--color-dark-gray);
	letter-spacing: 0.03em;
	text-align: center;
	margin: 0 auto;
	width: 80%;
}

.ul-body {
	font-weight: 300;
	line-height: 1.7em;
	letter-spacing: 0.02em;
	list-style: circle outside;
	list-style-image: none;
	margin-left: 10px;
	padding: var(--spacing-0);
}

.li-body {
	margin: 12px 12px 8px 12px;
	list-style: circle outside;
}

.li-body p {
	display: inline;
	text-indent: initial;
}

li.li-body::marker {
  font-size: 0.8em;
}

ul.writing-list li {
	background-color: var(--color-white);
	padding-left: var(--spacing-6);
	padding-right: var(--spacing-6);
	-o-transition: all .2s ease-in-out;
	-ms-transition: all .2s ease-in-out,;
	-moz-transition: all .2s ease-in-out;
	-webkit-transition: all .2s ease-in-out;
	transition: all .2s ease-in-out;
	display: flex;
	align-items: center;
	justify-content: space-between;
	gap: var(--spacing-2);
}

ul.writing-list li:hover {
	background-color: var(--color-light-gray);
	border-radius: 8px;
}

.writing-list .material-symbols-outlined {
	font-size: 20px;
	font-weight: 300;
}

.writing-list p {
	margin-bottom: 0;
}

.highlight {
	background-color: transparent;
	background-image: linear-gradient(to right, rgba(80, 99, 138, 0.1), rgba(124, 138, 167, 0.3));
	background-repeat: no-repeat;
	background-position: left center;
	background-size: 0% 100%;
	border-radius: 4px;
	animation: highlight-wipe 0.5s ease forwards;
	animation-delay: 0.6s;
}
@keyframes highlight-wipe {
		from {
			background-size: 0% 100%;
		}
		to {
			background-size: 100% 100%;
		}
}

.project img {
	width: 100%;
	margin-bottom: var(--spacing-5);
	}

.project .img_left {
	display: block;
	float: left;
	width: 49%;
}

.project .img_right {
	display: block;
	float: right;
	width: 49%;
}

.image-border {
	border-radius: 8px;
	border: 1px solid var(--color-light-gray);
	box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
}

::selection {
	background: var(--color-blue);
	color: var(--color-white)/* Safari */
}

::-moz-selection {
	background: var(--color-blue);
	color: var(--color-white)/* Firefox */
}

.paypal-box .material-symbols-outlined {
	color: var(--color-blue);
	font-size: 28px;
}

.filterDiv {
	display: none; /* Hidden by default */
}

.show {
	display: inline-block;
}
/* ... */

